modify and add some user and team api
