# backend/web/routes/routes.go
@@ -30,6 +30,7 @@ func UserRouter(Router *gin.RouterGroup) {
 		UserRouter.POST("/reset/password", controllers.ResetPassword)
 		UserRouter.POST("/modify/profile", controllers.UpdateUserInfo)
 		UserRouter.GET("/profile/:user_id", middlewares.JWTAuth(), controllers.GetPersonProfile)
+		UserRouter.GET("/student/list", controllers.GetAllStudents)
 	}
 }
 
@@ -41,7 +42,29 @@ func GroupRouter(Router *gin.RouterGroup) {
 		groupRouter.PUT("/update/profile/:teamId", controllers.UpdateTeamProfile)
 		groupRouter.PUT("/join", controllers.JoinTeam)
 		groupRouter.GET("/profile/:userId", controllers.GetTeamProfile)
-		groupRouter.DELETE("/leave", controllers.LeaveTeam)
+		groupRouter.DELETE("/leave/:userId", controllers.LeaveTeam)
+		groupRouter.GET("/get/student-info/:teamName", controllers.GetStudentInfo)
+		groupRouter.GET("/get/list", controllers.GetAllTeams)
+		groupRouter.GET("/invite/:userId/:teamId", controllers.InviteUserToTeam)
+
+		// groupRouter.POST("/groups/:group_id/invite", controllers.InviteToTeam)
+		// groupRouter.POST("/groups/:group_id/leave", controllers.LeaveTeam)
+
+	}
+}
+
+func ProjectRouter(Router *gin.RouterGroup) {
+	groupRouter := Router.Group("project")
+	zap.S().Info("配置分组相关的 url")
+	{
+		groupRouter.POST("/create", controllers.CreateProject)
+
+
+		// groupRouter.PUT("/update/profile/:teamId", controllers.UpdateTeamProfile)
+		// groupRouter.PUT("/join", controllers.JoinTeam)
+		// groupRouter.GET("/profile/:userId", controllers.GetTeamProfile)
+		// groupRouter.DELETE("/leave", controllers.LeaveTeam)
+		// groupRouter.GET("/get/student-info/:teamName", controllers.GetStudentInfo)
 
 		// groupRouter.POST("/groups/:group_id/invite", controllers.InviteToTeam)
 		// groupRouter.POST("/groups/:group_id/leave", controllers.LeaveTeam)
